--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -257,7 +257,7 @@
                                                                 {% elif h.whfa >= -2.0 and h.whfa <= 2.0 %}
                                                                     <td style="background-color: rgb(0, 165, 79);"> Normal ({{ h.whfa }})</td>
                                                                 {% elif h.whfa >= -3.0 and h.whfa <= -2.0 %}
-                                                                    <td style="background-color: rgb(255, 241, 2);"> Wasted ({{ h.whfa }})</td>
+                                                                    <td style="background-color: rgb(255, 241, 2);"> Moderately Wasted ({{ h.whfa }})</td>
                                                                 {% else %}
                                                                     <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{ h.whfa }})</td>
                                                                 {% endif %}
@@ -563,13 +563,13 @@
                                                         </div>
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start  mb-2">
                                                             <i class="fas fa-2x fa-square" style="color: rgb(255, 241, 2);"></i>
-                                                            <span class="mx-3"><h5>Underweight</h5></span>
+                                                            <span class="mx-3"><h5>Moderately Wasted</h5></span>
                                                         </div>          
                                                         
                                                         
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start mx-md-4  mb-2" >
                                                             <i class="fas fa-2x fa-square d-flex align-items-center" style="color: rgb(238, 29, 35);"></i>
-                                                            <span class="mx-3"><h5>Severly Underweight</h5></span>
+                                                            <span class="mx-3"><h5>Severly Wasted</h5></span>
                                                         </div>
                                                         <div class="col-lg-6 col-12 d-flex justify-content-start" >
                                                             <i class="fas fa-2x fa-square" style="color: rgb(242, 98, 33);"></i>
