--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
@@ -153,7 +153,7 @@
                     <div class="card shadow-sm bg-white rounded h-100">
                         <!-- <div class="card-header" style="background-color: rgb(233, 221, 0) !important;"> -->
                         <div class="card-header">
-                            <h4 class="card-title">Wasted</h4>
+                            <h4 class="card-title">Moderately Wasted</h4>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ wasted }}</p>
