guardian name + phone_num bhw

--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -121,6 +121,24 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm justify-content-start justify-content-md-center">
+                                        <p class="mb-0">Guardian Name</p>
+                                    </div>
+                                    <div class="col-sm justify-content-start justify-content-md-center">
+                                        <p class="text-muted mb-0">{{ preschooler.parent.user.first_name }} {{ preschooler.parent.user.last_name }} {{ preschooler.parent.user.suffix_name }}</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
+                                        <p class="mb-0">Contact Number</p>
+                                    </div>
+                                    <div class="col-sm justify-content-start justify-content-md-center">
+                                        <p class="text-muted mb-0">{{ preschooler.parent.user.phone_num }}</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="mb-0">Health Problem</p>
                                     </div>
                                     <div class="col-sm justify-content-start justify-content-md-center">
