--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
@@ -103,6 +103,10 @@
                                 {% endif %}
                                 </div>
                             </div>
+                            <div class="d-flex justify-content-start">
+                                <p style="font-size:20px; font-weight:bold;margin-right: 10px;">Next Vaccine Date:</p>
+                                <p class="text-dark mb-0" style="font-size: 20px;">{{ next_vax }}</p>
+                            </div>
                             <div class="" >
                                 <p style="font-size:20px; font-weight:bold; margin-right:10px; margin: 0;">Remaining Vaccine:</p>
                                 {% if 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Tetanus Toxoid' in vax_list and 'Inactivated Polio Vaccine' in vax_list and 'Measles Mumps - Rubella' in vax_list and dose_list.7 == 2 %}
