--- a/ppms_project/profilingApp/templates/activities/Change Password.html
+++ b/ppms_project/profilingApp/templates/activities/Change Password.html
@@ -52,7 +52,7 @@
    })
  </script>
  
- <body class="mt-0 mb-0 d-flex" style="background-color: black; height: auto; flex-wrap: wrap;">
+ <body class="mt-0 mb-0 d-flex" style="background-color: black; height: auto;">
     <!-- Dashboard -->
     <div id="grid" class="container-fluid mt-0">
         <div class="container-grid">
