--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -30,19 +30,19 @@
                 <div>
                     <a href="#" class="name" style="text-decoration: none; ">
                         <img class="navbar-icon" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
-                        <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;margin-left:15px;">City of Dasmariñas</span>
+                        <span id="parenthidetitle" class="brand__name" style="color:#2c5f2dff;margin-left:15px;">City of Dasmariñas</span>
                     </a>
                 </div>
-                <div class="btn-group my-2 mx-3">
+                <div class="btn-group my-2">
                     <li>
                         <a class="btn nav-link" id="parentButton" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="left" data-bs-offset="0,7"
                         title="User Settings" aria-expanded="false">
                             <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
                             <span class="position-absolute top-100 start-75 translate-middle badge rounded-pill text-dark" style="border-radius: 50%;">
                                 <i class="fa fa-lg fa-fw fa-caret-down bg-light" style="border-radius: 25%; margin-bottom: 15px;"></i>
-                            </span></a>
-                            
+                            </span>
                         </a>
+                        
                         <ul class="dropdown-menu dropdown-menu-end p-2 bg-white" style="margin-right:3%;" aria-labelledby="parentButton">
                             <div class="text-dark bg-white"style="text-decoration: none;"href="">
                                 <div class="card p-3">
@@ -82,11 +82,11 @@
  </script>
 
 <body>
-    <div id="grid" class="container-fluid" style="padding:7%; margin-top:50px;">
+    <div id="grid" class="container-fluid" style="padding:7%;">
         <div class="container-grid">
             <div class="">
                 <div class="row"> 
-                    <div class="row d-flex justify-content-stretch flex-row ">
+                    <div class="row d-flex justify-content-stretch flex-row m-0">
                         <div class="col-sm-6  mb-3 d-flex justify-content-sm-start justify-content-center">
                             <h3 style="text-align:left;">My Preschoolers</h3>
                         </div>
@@ -101,36 +101,36 @@
             </div>
         </div>
         <div class="container-fluid">
-            <div class="modal fade" id="addSched" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="addSched" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
                 <div class="modal-dialog modal-dialog-centered modal-lg">
                     <div class="modal-content">
                         <div class="modal-header" >
-                            <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel">Enroll Preschooler</h5>
+                            <h5 class="modal-title fa fa-user-edit mx-2" id="exampleModalLabel">  Enroll Preschooler</h5>
                         </div>
                         <div class="modal-body mx-4">
                             <form method="POST">
                                 {% csrf_token %}
-                                <div class="md-form">
+                                <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">First Name: </label>
                                     <input class="form-control" type="text" name="first_name" id="first_name">
                                 </div>
-                                <div class="md-form">
+                                <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Middle name:</label>
                                     <input class="form-control" type="text" name="middle_name" id="middle_name">
                                 </div>
-                                <div class="md-form">
+                                <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Last name:</label>
                                     <input class="form-control" type="text" name="last_name" id="last_name">
                                 </div>
-                                <div class="md-form">
+                                <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Suffix:</label>
                                     <input class="form-control" type="text" placeholder="If Applicable" name="suffix_name" id="suffix_name">
                                 </div>
-                                <div class="md-form">
+                                <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Birthdate:</label>
                                     <input class="form-control" type="date" name="birthday" id="birthday">
                                 </div>
-                                <div class="md-form">
+                                <div class="md-form mb-2">
                                     <label id="user-lbl" data-error="wrong" data-success="right">Gender:</label>
                                     <select name="gender" class="form-select" aria-label="Default select example">
                                         <option value="Male" selected>Male</option>
@@ -150,7 +150,7 @@
         {% for chunk in chunks %}
             <div class="row">
                 {% for item in chunk %}
-                    <div class="col-lg-{{ numberOfColumns }} mb-3">
+                    <div class="col-xl-{{ numberOfColumns }} mb-3">
                         <a class="card hoverable text-decoration-none" href="{% url 'parent_preschooler' item.id %}" style="min-height: 140px;border-radius: 10px 10px 10px 10px;">
                             <div class="card-body d-flex flex-column align-items-stretch justify-content-center">
                                 <div class="text-center">
@@ -162,15 +162,29 @@
                                                 <img class="rounded-circle"src="{% static '/Media/kidGirl.jpg' %}" height="100%" width="100%" style="min-width: 85px;">
                                             {% endif %}
                                         </div>
-                                        <div class="col-8 d-flex justify-content-center align-items-center text-start  text-body">
-                                            <div>Name : {{ item.first_name }} {{ item.middle_name }} {{ item.last_name }} {{ preschooler.suffix_name }} 
-                                                <br> Age: {{item.age_months}} months
-                                                <br> Gender: {{ item.gender }}
-                                                {% if item.vaccine_count == 8 %}
-                                                    <br> Vaccine: Complete
-                                                {% else %}
-                                                    <br> Vaccine: Incomplete
-                                                {% endif %}
+                                        <div id="parentCardsText" class="col-8 d-flex justify-content-center align-items-center text-start text-body">
+                                            <div>
+                                                <div class="row">
+                                                    Name : {{ item.first_name }} {{ item.middle_name }} {{ item.last_name }} {{ preschooler.suffix_name }} 
+                                                </div>
+                                                <div class="row">
+                                                    {% if item.age_months >= 60 %}
+                                                    <div class="d-flex flex-row p-0"> Age: {{item.age_months}} <p class="text-danger mx-1 my-0">(Overage)</p> </div>
+                                                        
+                                                    {% else %}
+                                                        Age: {{item.age_months}} months
+                                                    {% endif %}
+                                                </div>
+                                                <div class="row">
+                                                    Gender: {{ item.gender }}
+                                                </div>
+                                                <div class="row">
+                                                    {% if item.vaccine_count == 8 %}
+                                                        Vaccine: Complete
+                                                    {% else %}
+                                                        Vaccine: Incomplete
+                                                    {% endif %}
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
