--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -98,7 +98,7 @@
                                                 <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ h.wfa }})</td>
                                             {% elif h.wfa >= -2.0 and h.wfa <= 2.0 %}
                                                 <td style="background-color: rgb(0, 165, 79);"> Normal ({{ h.wfa }})</td>
-                                            {% elif h.wfa >= -3.0 and h.wfa <= -2.0 %}
+                                            {% elif h.wfa >= -3.0 and h.wfa < -2.0 %}
                                                 <td style="background-color: rgb(255, 241, 2);"> Underweight ({{ h.wfa }})</td>
                                             {% else %}
                                                 <td style="background-color: rgb(238, 29, 35);"> Severely Underweight ({{ h.wfa }})</td>
@@ -108,7 +108,7 @@
                                                 <td style="background-color: rgb(242, 98, 33);"> Tall ({{ h.hfa }})</td>
                                             {% elif h.hfa >= -2.0 and h.hfa <= 2.0 %}
                                                 <td style="background-color: rgb(0, 165, 79);"> Normal ({{ h.hfa }})</td>
-                                            {% elif h.hfa >= -3.0 and h.hfa <= -2.0 %}
+                                            {% elif h.hfa >= -3.0 and h.hfa < -2.0 %}
                                                 <td style="background-color: rgb(255, 241, 2);"> Stunted ({{ h.hfa }})</td>
                                             {% else %}
                                                 <td style="background-color: rgb(238, 29, 35);"> Severely Stunted ({{ h.hfa }})</td>
@@ -120,7 +120,7 @@
                                                 <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ h.whfa }})</td>
                                             {% elif h.whfa >= -2.0 and h.whfa <= 2.0 %}
                                                 <td style="background-color: rgb(0, 165, 79);"> Normal ({{ h.whfa }})</td>
-                                            {% elif h.whfa >= -3.0 and h.whfa <= -2.0 %}
+                                            {% elif h.whfa >= -3.0 and h.whfa < -2.0 %}
                                                 <td style="background-color: rgb(255, 241, 2);"> Moderately Wasted ({{ h.whfa }})</td>
                                             {% else %}
                                                 <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{ h.whfa }})</td>
@@ -281,7 +281,7 @@
                                         <div class="card-body p-3">
                                             <p class="card-text h5" style="color: rgb(0, 165, 79);">Normal ({{ preschooler.wfa }})</p>
                                         </div>
-                                    {% elif preschooler.wfa >= -3.0 and preschooler.wfa <= -2.0 %}
+                                    {% elif preschooler.wfa >= -3.0 and preschooler.wfa < -2.0 %}
                                         <div class="card-body p-3">
                                             <p class="card-text h5" style="color: rgb(255, 241, 2);">Underweight ({{ preschooler.wfa }})</p>
                                         </div>
@@ -315,7 +315,7 @@
                                         <div class="card-body p-3">
                                             <p class="card-text h5" style="color: rgb(0, 165, 79);">Normal ({{ preschooler.hfa }})</p>
                                         </div>
-                                    {% elif preschooler.hfa >= -3.0 and preschooler.hfa <= -2.0 %}
+                                    {% elif preschooler.hfa >= -3.0 and preschooler.hfa < -2.0 %}
                                         <div class="card-body p-3">
                                             <p class="card-text h5" style="color: rgb(255, 241, 2);">Stunted ({{ preschooler.hfa }})</p>
                                         </div>
@@ -351,7 +351,7 @@
                                         <div class="card-body p-3">
                                             <p class="card-text  h5" style="color: rgb(0, 165, 79);">Normal ({{ preschooler.whfa }})</p>
                                         </div>
-                                    {% elif preschooler.whfa >= -3.0 and preschooler.whfa <= -2.0 %}
+                                    {% elif preschooler.whfa >= -3.0 and preschooler.whfa < -2.0 %}
                                         <div class="card-body p-3">
                                             <p class="card-text  h5" style="color: rgb(255, 241, 2);">Moderately Wasted ({{ preschooler.whfa }})</p>
                                         </div>
@@ -384,7 +384,7 @@
                                         <div class="card-body p-3">
                                             <p class="card-text  h5" style="color: rgb(0, 165, 79);"> Normal ({{ preschooler.bmifa }})</p>
                                         </div>
-                                    {% elif preschooler.bmifa >= -3.0 and preschooler.bmifa <= -2.0 %}
+                                    {% elif preschooler.bmifa >= -3.0 and preschooler.bmifa < -2.0 %}
                                         <div class="card-body p-3">
                                             <p class="card-text  h5" style="color: rgb(255, 241, 2);">Moderately Wasted ({{ preschooler.bmifa }})</p>
                                         </div>
